<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/add"
        />
    <item
        android:id="@+id/menu_lookcode"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/lookcode"
	/>
    <item
        android:id="@+id/menu_delete_all"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_all"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit"/>

</menu>
