<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/timepick"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/label_lt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="20dp" >

            <EditText
                android:id="@+id/timepicker_input_name"
                style="?android:attr/textAppearanceLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/alarm_name"
                android:singleLine="true"
                android:textColor="@android:color/primary_text_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/settimerbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/set"
                android:textSize="24dp" >
            </Button>

            <Button
                android:id="@+id/cancelsettimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:textSize="24dp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>